solve touch overflow

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ a:hover {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    position: relative;
 }
 
 #menu {
